# shotclock

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
shotclock/: clock.py  consumers.py  routing.py  urls.py  views.py
static/shotclock/css/: style.css
static/shotclock/js/: debug.js
templates/shotclock/: control.html  display.html  index.html
